# IFMO_CPP_programming_20180910

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  run_test.sh  run_tests.sh  t01_even.cpp  t05_minodd.cpp  t09_equals.cpp
src/main/: t09_snail.cpp
src/main/cpp/: main.cpp  minus.cpp  minus.h  plus.cpp  plus.h  t00_hello.cpp  t00_hello.h  t01_char.cpp  t01_char.h  t01_even.cpp  t01_even.h  t01_frac.cpp  t01_frac.h  t01_max.cpp  t01_max.h  t01_max3.cpp  t01_max3.h  t01_min.cpp  t01_min.h  t01_quad.cpp  t01_quad.h  t01_sort.cpp  t01_sort.h  t01_squirrels.cpp  t01_squirrels.h  t01_unique.cpp  t01_unique.h  t02_dist.cpp  t02_dist.h  t02_divisor.cpp  t02_divisor.h  t02_even2.cpp  t02_even2.h  t02_frac_2.cpp  t02_frac_2.h  t02_new.cpp  t02_new.h  t02_shoes.cpp  t02_shoes.h  t02_squirrels2.cpp  (+131 more)
src/test/resources/t00_hello/hello_with_input/: input.txt
src/test/resources/t01_even/test5/: input.txt
src/test/resources/t01_even/test7/: output.txt
src/test/resources/t01_even/test8/: output.txt
src/test/resources/t01_frac/test1/: output.txt
src/test/resources/t01_frac/test4/: output.txt
src/test/resources/t01_max/test2/: input.txt
src/test/resources/t01_max/test3/: input.txt
src/test/resources/t01_max/test4/: input.txt
src/test/resources/t01_max/test5/: input.txt
src/test/resources/t01_max/test6/: input.txt
src/test/resources/t01_max/test7/: input.txt
src/test/resources/t01_max/test8/: input.txt
src/test/resources/t01_max3/test03/: input.txt
src/test/resources/t01_max3/test04/: input.txt
src/test/resources/t01_max3/test05/: input.txt
src/test/resources/t01_max3/test07/: input.txt
src/test/resources/t01_max3/test08/: input.txt
(+466 files in other folders)
