cmake_minimum_required(VERSION 3.12)
project(IFMO_CPP_programming_20180910)

set(CMAKE_CXX_STANDARD 14)

add_executable(IFMO_CPP_programming_20180910
        src/main/cpp/main.cpp src/main/cpp/t01_sort.cpp src/main/cpp/t01_sort.h src/main/cpp/t02_shoes.cpp src/main/cpp/t02_shoes.h src/main/cpp/t03_points.cpp src/main/cpp/t03_points.h src/main/cpp/t04_students.cpp src/main/cpp/t04_students.h)
