cmake_minimum_required(VERSION 3.12)
project(IFMO_CPP_programming_20180910)

set(CMAKE_CXX_STANDARD 14)

add_executable(IFMO_CPP_programming_20180910
        src/main/cpp/main.cpp src/main/cpp/t01_char.cpp src/main/cpp/t01_char.h src/main/cpp/t02_up.cpp src/main/cpp/t02_up.h src/main/cpp/t03_toggle.cpp src/main/cpp/t03_toggle.h src/main/cpp/t04_count.cpp src/main/cpp/t04_count.h src/main/cpp/t05_palindrom.cpp src/main/cpp/t05_palindrom.h src/main/cpp/t06_longest.cpp src/main/cpp/t06_longest.h src/main/cpp/t07_ip.cpp src/main/cpp/t07_ip.h)
